@@ -1,3 +1,8 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Tue Jul 23 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
 - Remove unnecessary ``data_provider`` key in the metadata.json file.
 
